--- a/styles/main.css
+++ b/styles/main.css
@@ -151,8 +151,8 @@ body h6.title {
   cursor: default;
   display: block;
   font-family: 'znikomit', sans-serif;
-  font-size: 140px;
-  line-height: 120px;
+  font-size: 150px;
+  line-height: 130px;
   max-width: 800px;
   margin: 80px auto 20px auto;
   position: relative;
@@ -164,6 +164,11 @@ body h6.title {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 body p {
   font-family: 'Source Sans Pro', sans-serif;
@@ -349,7 +354,7 @@ nav#main-nav ul li a:hover {
   font-weight: 100;
   text-align: center;
 }
-.index #home {
+#home {
   background: url('../img/intro-bg.png');
   background-position: 50% 100%;
   background-repeat: repeat-x;
@@ -358,20 +363,20 @@ nav#main-nav ul li a:hover {
   position: relative;
   width: 100%;
 }
-.index #home #main-social {
+#home #main-social {
   position: absolute;
   top: 40px;
   right: 40px;
   width: 200px;
   z-index: 999;
 }
-.index #home #main-social ul {
+#home #main-social ul {
   float: right;
 }
-.index #home #main-social ul li {
+#home #main-social ul li {
   margin: 0 0 0 8px;
 }
-.index #home #main-social ul li a i {
+#home #main-social ul li a i {
   color: #9999cc;
   font-size: 28px;
   line-height: 24px;
@@ -381,10 +386,10 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-.index #home #main-social ul li a:hover i {
+#home #main-social ul li a:hover i {
   color: #26264c;
 }
-.index #home h3 {
+#home h3 {
   font-family: 'lora', serif;
   font-size: 28px;
   font-weight: normal;
@@ -393,12 +398,12 @@ nav#main-nav ul li a:hover {
   margin: 40px 0 20px 0;
   text-align: center;
 }
-.index #home img {
+#home img {
   display: block;
   margin: 0 auto 25px auto;
   max-width: 415px;
 }
-.index #home h1 {
+#home h1 {
   font-family: 'passionone', sans-serif;
   font-size: 100px;
   line-height: 70px;
@@ -406,18 +411,18 @@ nav#main-nav ul li a:hover {
   text-align: center;
   text-transform: uppercase;
 }
-.index #home h1 span {
+#home h1 span {
   font-size: 70px;
   line-height: 0;
 }
-.index #portfolio {
+#portfolio {
   background-color: #d2d2f9;
 }
-.index #portfolio #grid {
+#portfolio #grid {
   margin: 0;
   overflow: auto;
 }
-.index #portfolio #grid li {
+#portfolio #grid li {
   display: block;
   float: left;
   height: auto;
@@ -427,18 +432,13 @@ nav#main-nav ul li a:hover {
   -webkit-opacity: 1;
   -moz-opacity: 1;
   opacity: 1;
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  -o-transform: translateY(0);
-  transform: translateY(0);
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
-.index #portfolio #grid li a article .image {
+#portfolio #grid li a article .image {
   overflow: hidden;
   position: relative;
   -webkit-transition: all 0.5s cubic-bezier(0.75, 0.25, 0.25, 0.75);
@@ -447,7 +447,7 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.5s cubic-bezier(0.75, 0.25, 0.25, 0.75);
   transition: all 0.5s cubic-bezier(0.75, 0.25, 0.25, 0.75);
 }
-.index #portfolio #grid li a article .image img {
+#portfolio #grid li a article .image img {
   display: block;
   max-height: 500px;
   max-width: 420px;
@@ -465,7 +465,7 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-.index #portfolio #grid li a article .image:after {
+#portfolio #grid li a article .image:after {
   background-color: #393973;
   content: " ";
   height: 100%;
@@ -482,18 +482,17 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-.index #portfolio #grid li a article .info-wrap {
-  max-height: 120px;
+#portfolio #grid li a article .info-wrap {
+  max-height: 100px;
   overflow: hidden;
   position: relative;
 }
-.index #portfolio #grid li a article .info-wrap span {
+#portfolio #grid li a article .info-wrap span {
   background-color: #26264c;
   display: block;
   height: 0%;
   position: absolute;
   top: 0;
-  z-index: -1;
   width: 100%;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -501,10 +500,11 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-.index #portfolio #grid li a article .info-wrap .info {
+#portfolio #grid li a article .info-wrap .info {
   padding: 30px 20px;
+  z-index: 1;
 }
-.index #portfolio #grid li a article .info-wrap .info h4 {
+#portfolio #grid li a article .info-wrap .info h4 {
   font-family: 'lora';
   font-weight: bold;
   font-size: 24px;
@@ -515,7 +515,7 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-.index #portfolio #grid li a article .info-wrap .info p {
+#portfolio #grid li a article .info-wrap .info p {
   font-size: 10px;
   margin: 3px 0 0 0;
   text-transform: uppercase;
@@ -525,7 +525,7 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-.index #portfolio #grid li a:hover article .image img {
+#portfolio #grid li a:hover article .image img {
   -webkit-filter: grayscale(0%);
   -webkit-filter: grayscale(0);
   -moz-filter: greyacale(0%);
@@ -539,34 +539,37 @@ nav#main-nav ul li a:hover {
   -o-transform: scale(1.1);
   transform: scale(1.1);
 }
-.index #portfolio #grid li a:hover article .image:after {
+#portfolio #grid li a:hover article .image:after {
   -webkit-opacity: 0;
   -moz-opacity: 0;
   opacity: 0;
 }
-.index #portfolio #grid li a:hover article .info-wrap span {
+#portfolio #grid li a:hover article .info-wrap span {
   height: 100%;
 }
-.index #portfolio #grid li a:hover article .info-wrap .info h4 {
+#portfolio #grid li a:hover article .info-wrap .info h4 {
   color: #d2d2f9;
+  -webkit-opacity: 0.95;
+  -moz-opacity: 0.95;
+  opacity: 0.95;
 }
-.index #portfolio #grid li a:hover article .info-wrap .info p {
+#portfolio #grid li a:hover article .info-wrap .info p {
   color: #d2d2f9;
   -webkit-opacity: 0.75;
   -moz-opacity: 0.75;
   opacity: 0.75;
 }
-.index #about {
+#about {
   background-color: #d2d2f9;
   padding-bottom: 80px;
 }
-.index #about p {
+#about p {
   font-size: 18px;
   line-height: 28px;
   margin: 0 auto;
   max-width: 325px;
 }
-.index #about blockquote {
+#about blockquote {
   color: #9999cc;
   font-family: 'lora', serif;
   font-weight: bold;
@@ -575,7 +578,7 @@ nav#main-nav ul li a:hover {
   margin: 18px auto;
   max-width: 325px;
 }
-.index #contact {
+#contact {
   background: url('../img/footer-bg.png');
   background-position: 50% 350%;
   background-repeat: repeat-x;
@@ -585,16 +588,16 @@ nav#main-nav ul li a:hover {
   width: 100%;
   background-color: #d2d2f9;
 }
-.index #contact .wrapper {
+#contact .wrapper {
   margin: 40px auto 80px auto;
   max-width: 300px;
   text-align: center;
 }
-.index #contact .wrapper h3 {
+#contact .wrapper h3 {
   font-family: 'lora', serif;
   font-size: 26px;
 }
-.index #contact .wrapper h3 a {
+#contact .wrapper h3 a {
   color: #9999cc;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -602,21 +605,21 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-.index #contact .wrapper h3 a:hover {
+#contact .wrapper h3 a:hover {
   color: #26264c;
 }
-.index #contact .wrapper ul {
+#contact .wrapper ul {
   border-top: 1px solid #9999cc;
   margin-top: 4px;
   padding-top: 12px;
 }
-.index #contact .wrapper ul li {
+#contact .wrapper ul li {
   margin: 0 8px 0 0;
 }
-.index #contact .wrapper ul li:last-child {
+#contact .wrapper ul li:last-child {
   margin: 0;
 }
-.index #contact .wrapper ul li a i {
+#contact .wrapper ul li a i {
   color: #9999cc;
   font-size: 30px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -625,10 +628,10 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-.index #contact .wrapper ul li a i:hover {
+#contact .wrapper ul li a i:hover {
   color: #26264c;
 }
-.index #archive {
+#archive {
   width: 100%;
   height: 400px;
   background-image: url('../img/divider-archive.jpg');
@@ -639,7 +642,7 @@ nav#main-nav ul li a:hover {
   background-attachment: fixed;
   background-position: top center;
 }
-.index #resume {
+#resume {
   width: 100%;
   height: 400px;
   background-image: url('../img/divider-resume.jpg');
@@ -650,15 +653,15 @@ nav#main-nav ul li a:hover {
   background-attachment: fixed;
   background-position: top center;
 }
-.index .divider {
+.divider {
   background-color: #333366;
 }
-.index .divider .wrapper {
+.divider .wrapper {
   margin: 0 auto;
   padding: 150px 0 0 0;
   text-align: center;
 }
-.index .divider .wrapper h1 {
+.divider .wrapper h1 {
   color: #ededfc;
   font-family: 'lora', serif;
   font-size: 40px;
@@ -666,18 +669,17 @@ nav#main-nav ul li a:hover {
   line-height: 36px;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
 }
-.index .divider .wrapper a.btn {
+.divider .wrapper a.btn {
   border: 2px solid #ededfc;
   color: #ededfc;
   display: inline-block;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 17px;
   font-weight: bold;
-  height: 36px;
   letter-spacing: -0.5px;
-  line-height: 30px;
+  line-height: 17px;
   margin: 30px 0 0 0;
-  padding: 1px 16px;
+  padding: 8px 16px;
   text-transform: uppercase;
   white-space: nowrap;
   -webkit-border-radius: 5px;
@@ -698,260 +700,160 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-.index .divider .wrapper a.btn:hover {
+.divider .wrapper a.btn:hover {
   background-color: #ededfc;
   color: #26264c;
 }
-.index .divider .wrapper a.btn i {
+.divider .wrapper a.btn i {
   margin: 0 4px 0 0;
 }
-.resume {
-  background-color: #ebebff;
+@media only screen and (max-width: 1024px) {
+  body h1.title,
+  body h2.title,
+  body h3.title,
+  body h4.title,
+  body h5.title,
+  body h6.title {
+    font-size: 120px;
+    line-height: 100px;
+  }
+  #portfolio #grid li {
+    width: 33.3333%;
+  }
+  #portfolio #grid li:nth-child(7) {
+    display: none;
+  }
+  #portfolio #grid li:nth-child(8) {
+    display: none;
+  }
+  #about p {
+    font-size: 17px;
+    line-height: 27px;
+    max-width: 300px;
+  }
+  #about blockquote {
+    font-size: 30px;
+    line-height: 36px;
+    max-width: 300px;
+  }
 }
-.resume .section {
-  max-width: 950px;
-  padding: 40px 0;
+@media only screen and (max-width: 768px) {
+  body h1.title,
+  body h2.title,
+  body h3.title,
+  body h4.title,
+  body h5.title,
+  body h6.title {
+    font-size: 90px;
+    line-height: 70px;
+  }
+  #portfolio #grid li {
+    width: 50%;
+  }
+  #portfolio #grid li:nth-child(7) {
+    display: block;
+  }
+  #portfolio #grid li:nth-child(8) {
+    display: block;
+  }
+  #portfolio #grid li a article .info-wrap {
+    background-color: rgba(38, 38, 76, 0.85);
+    display: block;
+    height: 80px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    -webkit-opacity: 1;
+    -moz-opacity: 1;
+    opacity: 1;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+  }
+  #portfolio #grid li a article .info-wrap .info {
+    padding: 20px;
+  }
+  #portfolio #grid li a article .info-wrap .info h4 {
+    color: #9999cc;
+  }
+  #portfolio #grid li a article .info-wrap .info p {
+    color: #9999cc;
+  }
+  #portfolio #grid li a:hover article .info-wrap {
+    height: 0px;
+    -webkit-opacity: 0;
+    -moz-opacity: 0;
+    opacity: 0;
+  }
 }
-.resume .section .wrapper {
-  padding: 0 40px;
-  overflow: visible;
+@media only screen and (max-width: 620px) {
+  body h1.title,
+  body h2.title,
+  body h3.title,
+  body h4.title,
+  body h5.title,
+  body h6.title {
+    font-size: 60px;
+    line-height: 40px;
+  }
 }
-.resume .section .wrapper .panel {
-  background-color: #f5f5ff;
-  border: 1px solid #d2d2f9;
-  border-top: 0;
-  border-bottom: 0;
-  margin: 0;
-  overflow: auto;
-}
-.resume .section .wrapper .panel:last-child {
-  border-bottom: 1px solid #d2d2f9;
-}
-.resume .section .wrapper .panel .title {
-  float: left;
-  text-align: center;
-  margin-top: 20px;
-  width: 210px;
-}
-.resume .section .wrapper .panel .title i {
-  background-color: #ededfc;
-  color: #d2d2f9;
-  display: block;
-  font-size: 38px;
-  line-height: 70px;
-  margin: 0 auto;
-  width: 75px;
-  height: 75px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-}
-.resume .section .wrapper .panel .title span {
-  color: #d2d2f9;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 18px;
-  font-weight: 100;
-  text-transform: uppercase;
-}
-.resume .section .wrapper .panel .entry {
-  border-bottom: 1px solid #ededfc;
-  margin: 20px 40px 20px 210px;
-  padding: 0 0 20px 0;
-  position: relative;
-}
-.resume .section .wrapper .panel .entry:first-child {
-  margin-top: 40px;
-}
-.resume .section .wrapper .panel .entry:last-child {
-  border: 0;
-  margin-bottom: 40px;
-  padding: 0;
-}
-.resume .section .wrapper .panel .entry a.expand {
-  border: 1px solid #9999cc;
-  color: #9999cc;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 10px;
-  padding: 4px 6px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  text-transform: uppercase;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-.resume .section .wrapper .panel .entry a.expand:hover {
-  background-color: #26264c;
-  border-color: transparent;
-  color: #d2d2f9;
-}
-.resume .section .wrapper .panel .entry a.expand i {
-  margin: 0 2px 0 0;
-}
-.resume .section .wrapper .panel .entry h4 {
-  font-family: 'znikomit', sans-serif;
-  font-size: 26px;
-  line-height: 24px;
-}
-.resume .section .wrapper .panel .entry p.org-name {
-  font-size: 15px;
-  line-height: 25px;
-  text-transform: uppercase;
-  -webkit-opacity: 0.75;
-  -moz-opacity: 0.75;
-  opacity: 0.75;
-}
-.resume .section .wrapper .panel .entry .org-details {
-  margin: 20px 0 0 0;
-  -webkit-transform: all 0.2s ease-in-out;
-  -moz-transform: all 0.2s ease-in-out;
-  -ms-transform: all 0.2s ease-in-out;
-  -o-transform: all 0.2s ease-in-out;
-  transform: all 0.2s ease-in-out;
-}
-.resume .section .wrapper .panel .entry .org-details p {
-  color: #393973;
-  font-size: 16px;
-  line-height: 19px;
-}
-.resume .section .wrapper .panel .entry .org-details ul {
-  font-family: 'Source Sans Pro', sans-serif;
-  margin: 15px 0 0 0;
-}
-.resume .section .wrapper .panel .entry .org-details ul li {
-  color: #393973;
-  font-size: 14px;
-  line-height: 16px;
-  margin: 0 0 2px 0;
-  padding: 0 0 0 120px;
-}
-.resume .section .wrapper .panel .entry .org-details ul li:last-child {
-  margin-bottom: 0;
-}
-.resume .section .wrapper .panel .entry .org-details ul li i {
-  color: #bbbbdd;
-  position: absolute;
-  left: 0;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 16px;
-}
-.resume .section .wrapper .panel .entry .org-details ul li i:before {
-  font-family: 'FontAwesome';
-  margin-right: 3px;
-}
-.resume .section .wrapper .panel .entry .org-details ul li a {
-  color: #7272b9;
-}
-.resume .section .wrapper .panel .entry .org-details ul li a:hover {
-  text-decoration: underline;
-}
-.resume header {
-  background-color: #333366;
-}
-.resume header .image {
-  float: left;
-  margin-left: -40px;
-  text-align: center;
-  width: 210px;
-}
-.resume header .image img {
-  margin: -15px 0;
-  max-width: 130px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-}
-.resume header .profile {
-  float: left;
-}
-.resume header .profile h1 {
-  color: #d2d2f9;
-  font-family: 'znikomit';
-  font-size: 78px;
-  line-height: 68px;
-}
-.resume header .profile h3 {
-  color: #9999cc;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 28px;
-  font-weight: 100;
-  letter-spacing: -0.5px;
-  line-height: 28px;
-  margin: 4px 0 0 0px;
-  text-transform: uppercase;
-  -webkit-opacity: 0.75;
-  -moz-opacity: 0.75;
-  opacity: 0.75;
-}
-.resume header .contact {
-  float: right;
-}
-.resume header .contact a {
-  background-color: #26264c;
-  color: #4d4d9c;
-  display: block;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 13px;
-  margin: 0 0 5px 0;
-  padding: 6px 9px;
-  -webkit-border-radius: 12px;
-  -moz-border-radius: 12px;
-  border-radius: 12px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-.resume header .contact a:last-child {
-  margin: 0;
-}
-.resume header .contact a:hover {
-  background-color: #1d1d3b;
-  color: #9999cc;
-}
-.resume header .contact a i {
-  margin: 0 6px 0 0;
-}
-.resume header .contact a i.fa-location {
-  font-size: 15px;
-}
-.resume header .contact a i.fa-phone {
-  font-size: 14px;
-}
-.resume header .contact a i.fa-email {
-  font-size: 11px;
-}
-.resume #experience {
-  border-bottom: 1px solid #d2d2f9;
-  margin-top: -40px;
-}
-.resume #experience.panel {
-  padding-top: 40px;
-}
-.resume #education {
-  border-bottom: 1px solid #d2d2f9;
-}
-.resume #skills {
-  border-bottom: 1px solid #d2d2f9;
+@media only screen and (max-width: 400px) {
+  body h1.title,
+  body h2.title,
+  body h3.title,
+  body h4.title,
+  body h5.title,
+  body h6.title {
+    font-size: 50px;
+    line-height: 0px;
+  }
+  #portfolio #grid {
+    margin: 15px;
+  }
+  #portfolio #grid li {
+    margin-bottom: 15px;
+    width: 100%;
+  }
+  #about p {
+    font-size: 16px;
+    line-height: 25px;
+    margin: 0 30px;
+    max-width: 100%;
+  }
+  #about p:first-child {
+    margin-top: 14px;
+  }
+  #about blockquote {
+    margin: 14px 30px;
+    max-width: 100%;
+  }
+  #contact {
+    background: none;
+    background-color: #d2d2f9;
+    height: auto;
+  }
+  #contact .wrapper {
+    margin: 40px auto 50px auto;
+    max-width: 300px;
+  }
+  .divider .wrapper h1 {
+    color: rgba(237, 237, 252, 0.85);
+    font-size: 22px;
+    font-weight: bold;
+  }
+  .divider .wrapper a.btn {
+    background-color: rgba(237, 237, 252, 0.85);
+    border: rgba(237, 237, 252, 0.85);
+    color: #26264c;
+    font-size: 14px;
+    line-height: 14px;
+    margin-top: 10px;
+    padding: 8px 12px;
+  }
+  #footer {
+    display: none;
+  }
 }
